--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node ./Conexion_y_crud_bd_turso/bdturso.js"
+    "start": "node bdturso.js"
   },
   "author": "Google LLC",
   "license": "Apache-2.0",
